# Jit-

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  styles.css
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml  pages.yml
docs/: app.js  index.html  manifest.json  privacy.html  styles.css  sw.js  terms.html
docs/py/: bridge.py
examples/: full_analysis.py  platform_demo.py  sample_case.json
examples/data/: sample_tax_scenario.json
jit/: __init__.py  platform.py
jit/accounting/: __init__.py  amt_calculator.py  base.py  deduction_optimizer.py  engine.py  income_processor.py  quarterly_estimator.py  tax_calculator.py
jit/algorithms/: __init__.py  base.py  decision_tree.py  engine.py  optimizer.py  risk_assessor.py
jit/api/: __init__.py  gateway.py  main.py  middleware.py  models.py
jit/core/: __init__.py  config.py  events.py  models.py  services.py
jit/database/: __init__.py  models.py  session.py
jit/legal/: __init__.py  base.py  case_analyzer.py  compliance_engine.py  document_processor.py  engine.py  statute_parser.py
jit/utils/: __init__.py  formatters.py
jit_platform.egg-info/: PKG-INFO  SOURCES.txt
py/: bridge.py  manifest.json
scripts/: sync_pyodide_source.sh
tests/: test_platform.py  test_pyodide_bridge.py
tests/accounting/: __init__.py  test_deductions_amt.py  test_engine.py  test_income_processor.py  test_quarterly_estimator.py  test_tax_calculator.py
tests/algorithms/: __init__.py  test_algorithms.py
tests/api/: __init__.py  test_api.py  test_frontend.py  (+1 more)
(+22 files in other folders)
