[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jit-platform"
version = "0.1.0"
description = "Upgradeable accounting and legal analysis scaffold"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "GitHub Copilot" }
]

[tool.setuptools.packages.find]
include = ["jit*"]
